--- a/imagens-de-fundo/exercicio03/index.html
+++ b/imagens-de-fundo/exercicio03/index.html
@@ -8,9 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+    <div class="pai">
+        <div class="filho"></div>
+    </div>
 </body>
 </html>
